--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Quote-apps</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    <h1>Hello I'm Cristiano Ronaldo</h1>
+    <div class="quote-box">
+        <h2 class="q-heading">Quote of the day</h2>
+        <blockquote id="quote"> labore.z...</blockquote>
+        <span  id="author">Loading...</span>
+        <div>
+            <button id="new-qoutes">New Quote</button>
+            <button><i class="fa-brands fa-twitter" style="margin-right: 4px;"></i>Tweet</button>
+        </div>
+
+    </div>
+    <script src="app.js"></script>
 </body>
 </html>
