added new Feature

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <span id="author">Loading...</span>
         <div>
             <button id="new-qoutes">New Quote</button>
-            <button><i class="fa-brands fa-twitter" style="margin-right: 4px;"></i>Tweet</button>
+            <button id="tweet-btn"><i class="fa-brands fa-twitter" style="margin-right: 4px;"></i>Tweet</button>
         </div>
 
     </div>
